# ffmpeg-converter

./: CMakeLists.txt  LICENSE  README.md  deploy-linux.sh  deploy.ps1
installer/: generate-welcome-bmp.ps1  installer.nsi
linux/: ffmpeg-converter.desktop
linux/deb/: postinst  postrm
resources/: app.rc  resources.qrc
src/: main.cpp
src/core/: AppSettings.cpp  AppSettings.h  ConversionController.cpp  ConversionController.h  ConversionWorker.cpp  ConversionWorker.h  FFmpegPresets.cpp  FFmpegPresets.h  FormatProfile.cpp  FormatProfile.h
src/ui/: ConversionLog.cpp  ConversionLog.h  DropZone.cpp  DropZone.h  MainWindow.cpp  MainWindow.h  SettingsPanel.cpp  SettingsPanel.h
src/utils/: FileUtils.cpp  FileUtils.h
